[gd_scene load_steps=3 format=3 uid="uid://bav2ls0nqas7u"]

[ext_resource type="Script" uid="uid://dahjd2xa7g78k" path="res://scenes/members/member_list.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="invite_btn_style"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0.345, 0.396, 0.949, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="MemberList" type="PanelContainer"]
custom_minimum_size = Vector2(240, 0)
size_flags_horizontal = 0
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HeaderBar" type="HBoxContainer" parent="VBox"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="HeaderLabel" type="Label" parent="VBox/HeaderBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "MEMBERS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GroupToggle" type="Button" parent="VBox/HeaderBar"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Status"

[node name="InviteButton" type="Button" parent="VBox"]
visible = false
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("invite_btn_style")
text = "Invite People"

[node name="SearchBar" type="LineEdit" parent="VBox"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
theme_override_font_sizes/font_size = 12
placeholder_text = "Search members..."

[node name="ScrollContainer" type="ScrollContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="VirtualContent" type="Control" parent="VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
